# Starlight-Windowing

./: CMakeLists.txt  README.md
include/star_windowing/: BasicCamera.hpp  InteractivityBus.hpp  KeyStates.hpp  Keys.hpp  PresentationCommands.hpp  RenderingSurface.hpp  StarWindow.hpp  SwapChainRenderer.hpp  Swapchain.hpp  WindowingContext.hpp
include/star_windowing/event/: KeyPress.hpp  KeyRelease.hpp  MouseButton.hpp  MouseMovement.hpp  RequestSwapChainFromService.hpp
include/star_windowing/policy/: EngineExitPolicy.hpp  EngineInitPolicy.hpp  EngineMainLoopPolicy.hpp  HandleKeyPressPolicy.hpp  HandleKeyReleasePolicy.hpp  HandleMouseButtonPolicy.hpp  HandleMouseMovementPolicy.hpp  ListenForPrepForNextFramePolicy.hpp  ListenForRequestForSwapChainPolicy.hpp  WindowingContext.hpp
include/star_windowing/service/: SwapChainControllerService.hpp
include/windowing/policy/: InteractiveWindowingPolicy.hpp
src/star_windowing/: BasicCamera.cpp  InteractivityBus.cpp  KeyStates.cpp  Keys.cpp  PresentationCommands.cpp  RenderingSurface.cpp  StarWindow.cpp  SwapChainRenderer.cpp  Swapchain.cpp  WindowingContext.cpp
src/star_windowing/event/: KeyPress.cpp  KeyRelease.cpp  MouseButton.cpp  MouseMovement.cpp  RequestSwapChainFromService.cpp
src/star_windowing/policy/: EngineExitPolicy.cpp  EngineInitPolicy.cpp  EngineMainLoopPolicy.cpp  HandleKeyPressPolicy.cpp  HandleKeyReleasePolicy.cpp  HandleMouseButtonPolicy.cpp  ListenForPrepForNextFramePolicy.cpp  ListenForRequestForSwapChainPolicy.cpp  WindowingContext.cpp
src/star_windowing/service/: SwapChainControllerService.cpp
